--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,19 @@
 name: Bump version
+
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["CI"] # Name of the test workflow
+    types:
+      - completed
+
 permissions:
   contents: write
+
 jobs:
   build:
+    if: >
+      github.event.workflow_run.conclusion == 'success' &&
+      github.event.workflow_run.head_branch == 'main'  
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
