--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,9 @@
-name: Bump Version
-
+name: Bump version
 on:
   workflow_dispatch
 
 permissions:
   contents: write
-
 jobs:
   build:
     runs-on: ubuntu-latest
