--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,19 +26,8 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Generate release body
-        id: release_body
-        run: |
-          # Use git log with more flexible revision specification
-          echo "## Commits" > release_body.md
-          git log --pretty=format:"- %s" $(git describe --tags --abbrev=0 HEAD^)..HEAD >> release_body.md
-          echo "" >> release_body.md
-          echo "## Contributors" >> release_body.md
-          git log --pretty=format:"%an" $(git describe --tags --abbrev=0 HEAD^)..HEAD | sort | uniq >> release_body.md
-
-      - name: Create a GitHub release
-        uses: ncipollo/release-action@v1
+      - name: Release
+        uses: softprops/action-gh-release@v2
         with:
-          tag: ${{ steps.tag_version.outputs.new_tag }}
-          name: Release ${{ steps.tag_version.outputs.new_tag }}
-          bodyFile: release_body.md
+          tag_name: ${{ steps.tag_version.outputs.new_tag }}
+          generate_release_notes: true
