--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,5 +6,15 @@
   "automerge": true,
   "pre-commit": {
     "enabled": true
-  }
+  },
+   // Schedule when updates are checked
+  "schedule": ["every Friday", "before 8am"],
+  "packageRules": [
+    {
+      "groupName": "pre-commit hooks",
+      "matchManagers": ["pre-commit"],
+      "matchDepTypes": ["repository"],
+      "groupSlug": "precommit"
+    }
+  ]
 }
