--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,13 +7,14 @@
   "pre-commit": {
     "enabled": true
   },
-  "schedule": ["every friday", "before 8am"],
+  "schedule": ["every friday", "before 9am"],
   "packageRules": [
     {
       "groupName": "pre-commit hooks",
       "matchManagers": ["pre-commit"],
       "matchDepTypes": ["repository"],
-      "groupSlug": "precommit"
+      "groupSlug": "precommit",
+      "labels": ["pre-commit", "dependencies"]
     }
   ]
 }
