--- a/template/.github/workflows/marimo.yml
+++ b/template/.github/workflows/marimo.yml
@@ -8,39 +8,13 @@ permissions:
   contents: read
 
 jobs:
-  install:
+  marimo:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout [${{ github.repository }}]
-        uses: actions/checkout@v4
+      - name: "Build the virtual environment for ${{ github.repository }}"
+        uses: cvxgrp/.github/actions/environment@v2.2.3
 
-      - name: Install uv
-        run: |
-          curl -LsSf https://astral.sh/uv/install.sh | sh
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
-          export PATH="$HOME/.local/bin:$PATH"
-          uv --version
-          echo "************ RUNNING IN ACT $ACT ? ************"
-
-      - name: Create venv and install dependencies
-        run: |
-          uv venv --python '3.12'
-          uv pip install --no-cache-dir -r requirements.txt
-          uv pip install --no-cache-dir marimo
-
-      - name: Convert notebooks to HTML
-        run: |
-          mkdir -p html_exports
-          find notebooks -name "*.py" -type f -exec sh -c '
-            filename=$(basename "$1" .py)
-            echo "Converting $filename.py to HTML..."
-            uv run marimo export html "$1" -o "html_exports/${filename}.html"
-          ' sh {} \;
-
-      - name: Upload if not environment
-        if: ${{ env.ACT != 'true' }}  # Skip if running with 'act'
-        uses: actions/upload-artifact@v4
+      - uses: cvxgrp/.github/actions/marimo@v2.2.3
         with:
-          name: marimo-notebooks  # The name of the artifact
-          path: ./html_exports  # Path to the directory containing test artifacts
+          source_folder: 'notebooks'
