--- a/.github/workflows/act.yml
+++ b/.github/workflows/act.yml
@@ -47,3 +47,9 @@ jobs:
         with:
           working-directory: template
           workflow: pre-commit.yml
+
+      - name: Test ci flow
+        uses: cvxgrp/cradle/actions/flow@main
+        with:
+          working-directory: template
+          workflow: ci.yml
