--- a/template/.github/workflows/release.yml
+++ b/template/.github/workflows/release.yml
@@ -2,15 +2,10 @@ name: Build and Release
 
 on:
   # Trigger on manual dispatch
-  workflow_dispatch:
-  # Trigger on push to the main branch
-  push:
-    branches:
-      - main
+  workflow_dispatch
 
 permissions:
   contents: write
-
 
 jobs:
   build-and-release:
