--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,4 +15,4 @@ repos:
     rev: v1.29.7
     hooks:
       - id: typos
-        exclude: '\.gitignore$'
+        exclude: ^\.gitignore|\.copier.answers$
