--- a/.github/workflows/act.yml
+++ b/.github/workflows/act.yml
@@ -35,6 +35,7 @@ jobs:
           git init -b main
           git add .
           git commit -m "Initial commit"
+          git fetch origin 2>/dev/null || true
 
       - name: Test Marimo flow
         uses: tschm/cradle/actions/flow@main
