Update .pre-commit-config.yaml (#63)
* Update .pre-commit-config.yaml

* Update release.yml

* fmt

* ignore copier answers

* ignore copier answers

--- a/template/.pre-commit-config.yaml
+++ b/template/.pre-commit-config.yaml
@@ -30,6 +30,9 @@ repos:
       - id: check-dependabot
         args: [ "--verbose" ]
 
+      - id: check-renovate
+        args: [ "--verbose" ]
+
       - id: check-github-workflows
         args: ["--verbose"]
 
