local test action

--- a/template/.github/workflows/ci.yml
+++ b/template/.github/workflows/ci.yml
@@ -20,6 +20,6 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - uses: cvxgrp/.github/actions/test@v2.2.5
+      - uses: ./.github/actions/test
         with:
           tests-folder: tests
