--- a/.github/workflows/act.yml
+++ b/.github/workflows/act.yml
@@ -27,3 +27,8 @@ jobs:
         uses: tschm/cradle/actions/flow@main
         with:
           workflow: ci.yml
+
+      - name: Test latex flow
+        uses: tschm/cradle/actions/flow@main
+        with:
+          workflow: latex.yml
