question about devcontainer

--- a/copier.yml
+++ b/copier.yml
@@ -1,7 +1,9 @@
 # additional questions
 ---
-# for questions
-# https://copier.readthedocs.io/en/stable/configuring/#prompt-templating
+use_devcontainer:
+    type: bool
+    default: false
+    help: Do you want to support a DevContainer?
 ---
 
 # Require that the user has at least Copier v9.1.0 installed
