--- a/copier.yml
+++ b/copier.yml
@@ -4,6 +4,11 @@ use_devcontainer:
     type: bool
     default: false
     help: Do you want to support a DevContainer?
+
+use_latex:
+    type: bool
+    default: false
+    help: Do you want to add a LaTeX document?
 ---
 
 # Require that the user has at least Copier v9.1.0 installed
