--- a/.github/resources/data.yaml
+++ b/.github/resources/data.yaml
@@ -1,5 +1,7 @@
 project_name: maffay
 username: tschm
 repository: http://www.spiegel.de
-use_devcontainer: true
-use_latex: false
+use_devcontainer: false
+use_latex: true
+use_dependabot: false
+use_renovate: false
