--- a/template/.github/actions/environment/action.yml
+++ b/template/.github/actions/environment/action.yml
@@ -54,11 +54,9 @@ runs:
         # Create virtual environment with uv
         uv venv --python ${{ inputs.python-version }}
 
-        # Ensure pip is installed and up-to-date in the virtual environment
-        python -m ensurepip --upgrade
-
     - name: Install the dependencies
       shell: bash
       run : |
         cat requirements.txt
         uv pip install -r requirements.txt
+        uv pip install pip
