towards including release of a Dockerimage

--- a/.github/actions/tag/action.yml
+++ b/.github/actions/tag/action.yml
@@ -6,10 +6,10 @@ inputs:
     description: "GitHub token for authentication"
     required: true
 
-outputs:
-  tag:
-    description: 'A new tag'
-    value: ${{ steps.tag_version.outputs.new_tag }}
+#outputs:
+#  tag:
+#    description: 'A new tag'
+#    value: ${{ steps.tag_version.outputs.new_tag }}
 
 runs:
   using: "composite"
