towards including release of a Dockerimage

--- a/.github/workflows/act.yml
+++ b/.github/workflows/act.yml
@@ -17,6 +17,11 @@ jobs:
         run: |
           cat .github/actions/tag/action.yml
 
+      - name: Build Docker image
+        uses: tschm/cradle/actions/flow@main
+        with:
+          workflow: docker.yml
+
       - name: Test pre-commit flow
         uses: tschm/cradle/actions/flow@main
         with:
