towards including release of a Dockerimage

--- a/template/.github/workflows/docker.yml
+++ b/template/.github/workflows/docker.yml
@@ -24,4 +24,4 @@ jobs:
       - name: Build container image
         shell: bash
         run: |
-          podman build -f docker/Dockerfile
+          sudo podman build -f docker/Dockerfile
