--- a/template/.github/workflows/docker.yml
+++ b/template/.github/workflows/docker.yml
@@ -24,4 +24,4 @@ jobs:
       - name: Build container image
         shell: bash
         run: |
-          docker build -f docker/Dockerfile
+          docker build -f docker/Dockerfile .
