--- a/template/.github/workflows/pre-commit.yml
+++ b/template/.github/workflows/pre-commit.yml
@@ -10,6 +10,9 @@ jobs:
   deptry:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout [${{ github.repository }}]
+        uses: actions/checkout@v4
+
       - name: "Build the virtual environment"
         uses: ./.github/actions/environment
         with:
