--- a/template/.github/workflows/pre-commit.yml
+++ b/template/.github/workflows/pre-commit.yml
@@ -22,7 +22,7 @@ jobs:
         shell: bash
         run: |
           python -m pip install --no-cache-dir deptry
-          python -m deptry -vv --per-rule-ignores "DEP002=kaleido" notebooks
+          python -m deptry -vv --per-rule-ignores "DEP002=kaleido,DEP002=clarabel" notebooks
 
   pre-commit:
     runs-on: ubuntu-latest
