--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,11 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate Tag
+        id: tag
         uses: ./.github/actions/tag
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Print Tag
+        run: |
+          echo {{ tag.outputs.new_tag }}
