--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,4 +19,4 @@ jobs:
 
       - name: Print Tag
         run: |
-          echo {{ tag.outputs.new_tag }}
+          echo ${{ tag.outputs.new_tag }}
