--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,11 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
+  debug:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
 
       - name: Print Tag
         run: |
-          echo ${{ steps.tag.outputs.new_tag }}
+          echo ${{ needs.build.outputs.new_tag }}
