--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,10 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Print Tag
+        run: |
+          echo ${{ steps.tag.outputs.new_tag }}
+
   debug:
     needs: build
     runs-on: ubuntu-latest
