--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,9 +20,13 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Set Output for Job
+        id: set_tag
+        run: echo "new_tag=${{ steps.tag.outputs.new_tag }}" >> "$GITHUB_OUTPUT"
+
       - name: Print Tag
         run: |
-          echo ${{ steps.tag.outputs.new_tag }}
+          echo "Generated tag: ${{ steps.tag.outputs.new_tag }}"
 
   debug:
     needs: build
