--- a/.github/actions/tag/action.yml
+++ b/.github/actions/tag/action.yml
@@ -6,9 +6,9 @@ inputs:
     description: "GitHub token for authentication"
     required: true
 
-outputs:
-  new_tag:
-    description: 'A new tag'
+#outputs:
+#  new_tag:
+#    description: 'A new tag'
 #    value: ${{ steps.tag_version.outputs.new_tag }}
 
 runs:
@@ -42,4 +42,4 @@ runs:
       run: |
           echo "DEBUG: ${{ steps.tag_version.outputs.new_tag }}"
           echo "new_tag=${{ steps.tag_version.outputs.new_tag }}" >> "$GITHUB_ENV"
-          echo "new_tag=${{ steps.tag_version.outputs.new_tag }}" >> "$GITHUB_OUTPUT"
+          #echo "new_tag=${{ steps.tag_version.outputs.new_tag }}" >> "$GITHUB_OUTPUT"
