--- a/.github/actions/tag/action.yml
+++ b/.github/actions/tag/action.yml
@@ -13,8 +13,8 @@ inputs:
 
 runs:
   using: "composite"
-  #outputs:
-  #  new_tag:
+  outputs:
+    new_tag:
   #    description: "A new tag"
   #    value: ${{ steps.tag_version.outputs.new_tag }}
 
@@ -42,4 +42,4 @@ runs:
       run: |
           echo "DEBUG: ${{ steps.tag_version.outputs.new_tag }}"
           echo "new_tag=${{ steps.tag_version.outputs.new_tag }}" >> "$GITHUB_ENV"
-          #echo "new_tag=${{ steps.tag_version.outputs.new_tag }}" >> "$GITHUB_OUTPUT"
+          echo "new_tag=${{ steps.tag_version.outputs.new_tag }}" >> "$GITHUB_OUTPUT"
