--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     outputs:
-      new_tag: ${{ steps.tag.outputs.new_tag }}
+      new_tag: ${{ env.new_tag }}
 
     steps:
       - name: Checkout [${{ github.repository }}]
@@ -20,13 +20,12 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set Output for Job
-        id: set_tag
-        run: echo "new_tag=${{ steps.tag.outputs.new_tag }}" >> "$GITHUB_OUTPUT"
+      #- name: Set Output for Job
+      #  id: set_tag
+      #  run: echo "new_tag=${{ steps.tag.outputs.new_tag }}" >> "$GITHUB_OUTPUT"
 
       - name: Print Tag 1
         run: |
-          echo "Generated tag 1: ${{ steps.tag.outputs.new_tag }}"
           echo "Generated tag 2: ${{ env.new_tag }}"
 
   debug:
@@ -36,4 +35,5 @@ jobs:
 
       - name: Print Tag 2
         run: |
-          echo ${{ env.new_tag }}
+          echo "A: ${{ needs.build.outputs.new_tag }}"
+          echo "B: ${{ env.new_tag }}"
