--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,20 +20,12 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
-      #- name: Set Output for Job
-      #  id: set_tag
-      #  run: echo "new_tag=${{ steps.tag.outputs.new_tag }}" >> "$GITHUB_OUTPUT"
-
-      - name: Print Tag 1
-        run: |
-          echo "Generated tag 2: ${{ env.new_tag }}"
 
   debug:
     needs: build
     runs-on: ubuntu-latest
     steps:
 
-      - name: Print Tag 2
+      - name: Print Tag
         run: |
           echo "A: ${{ needs.build.outputs.new_tag }}"
-          echo "B: ${{ env.new_tag }}"
