publish docker image (#88)
* publish docker image

* publish docker image

* publish docker image

* publish docker image

* publish docker image

* publish docker image

* publish docker image

* publish docker image

* publish docker image

* publish docker image

* publish docker image

* env.new_tag

* revisit release in template

--- a/.github/actions/tag/action.yml
+++ b/.github/actions/tag/action.yml
@@ -6,13 +6,9 @@ inputs:
     description: "GitHub token for authentication"
     required: true
 
-#outputs:
-#  tag:
-#    description: 'A new tag'
-#    value: ${{ steps.tag_version.outputs.new_tag }}
-
 runs:
   using: "composite"
+
   steps:
     # -----------------------------------------------------------------------------
     # Step 1: Bump version and tag
@@ -36,3 +32,4 @@ runs:
       shell: bash
       run: |
           echo "DEBUG: ${{ steps.tag_version.outputs.new_tag }}"
+          echo "new_tag=${{ steps.tag_version.outputs.new_tag }}" >> "$GITHUB_ENV"
