--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     outputs:
-      new_tag: ${{ env.new_tag }}
+      new_tag: ${{ steps.tag.outputs.new_tag }}
 
     steps:
       - name: Checkout [${{ github.repository }}]
