--- a/template/.github/actions/marimo/action.yml
+++ b/template/.github/actions/marimo/action.yml
@@ -6,10 +6,6 @@ inputs:
     description: 'Source directory containing Marimo .py files'
     required: false
     default: 'book/marimo'
-  working-directory:
-    description: 'Directory where the Python project is located'
-    required: false
-    default: '.'
 
 
 runs:
@@ -17,19 +13,16 @@ runs:
   steps:
     - name: Install marimo
       shell: bash
-      working-directory: ${{ inputs.working-directory }}
       run: |
         python -m pip install --no-cache-dir marimo
 
     - name: Create output directory
       shell: bash
-      working-directory: ${{ inputs.working-directory }}
       run: |
         mkdir -p artifacts/marimo
 
     - name: Convert Marimo files to HTML
       shell: bash
-      working-directory: ${{ inputs.working-directory }}
       run: |
         if [ ! -d "${{ inputs.source_folder }}" ]; then
           echo "Error: Source directory ${{ inputs.source_folder }} does not exist"
@@ -56,5 +49,5 @@ runs:
       uses: actions/upload-artifact@v4
       with:
         name: marimo
-        path: ${{ inputs.working-directory }}/artifacts/marimo
+        path: artifacts/marimo
         retention-days: 1
