actions to cradle

--- a/template/.github/workflows/marimo.yml
+++ b/template/.github/workflows/marimo.yml
@@ -18,6 +18,6 @@ jobs:
       - name: "Build the virtual environment for ${{ github.repository }}"
         uses: ./.github/actions/environment
 
-      - uses: ./.github/actions/marimo
+      - uses: tschm/cradle/actions/marimo@main
         with:
           source_folder: 'notebooks'
