--- a/template/.github/actions/environment/action.yml
+++ b/template/.github/actions/environment/action.yml
@@ -11,47 +11,12 @@ runs:
   using: "composite"
 
   steps:
-    - name: Checkout [${{ github.repository }}]
-      uses: actions/checkout@v4
-
-    # Install UV (Unix)
-    - name: Install UV (Unix)
-      if: runner.os == 'Linux' || runner.os == 'macOS'
-      shell: bash
-      run: |
-        set -eo pipefail
-        curl -LsSf https://astral.sh/uv/install.sh | sh
-        echo "$HOME/.local/bin" >> $GITHUB_PATH
-        echo "${{ github.workspace }}/.venv/bin" >> $GITHUB_PATH
-
-        # Ensure the venv/bin is first in the PATH
-        unset PYTHONHOME  # Unset the PYTHONHOME environment variable
-                          # if set to avoid any system Python fallback
-
-
-      # Install UV (Windows)
-    - name: Install UV (Windows)
-      if: runner.os == 'Windows'
-      shell: pwsh
-      run: |
-        irm https://astral.sh/uv/install.ps1 | iex
-        $uvPath = "C:\Users\runneradmin\.local\bin"
-        Add-Content $env:GITHUB_PATH $uvPath
-
-        # Modify PATH to only include the virtual environment's Scripts directory
-        Add-Content $env:GITHUB_PATH ${{ github.workspace }}\.venv\Scripts
-
-        # Unset PYTHONHOME to avoid any system Python being used
-        Remove-Item -Path Env:PYTHONHOME -ErrorAction SilentlyContinue
-
-    - name: Install pip and create venv
-      shell: bash
-      run: |
-        # Create virtual environment with uv
-        uv venv --python ${{ inputs.python-version }}
+    - name: "Build the virtual environment"
+      uses: tschm/cradle/actions/environment@main
+      with:
+        python-version: ${{ matrix.python-version }}
 
     - name: Install the dependencies
       shell: bash
       run : |
         uv pip install -r requirements.txt
-        uv pip install pip
