--- a/template/.github/workflows/ci.yml
+++ b/template/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: "Build the virtual environment"
-        uses: ./.github/actions/environment
+        uses: tschm/cradle/actions/environment@main
         with:
           python-version: ${{ matrix.python-version }}
 
