--- a/template/.github/workflows/marimo.yml
+++ b/template/.github/workflows/marimo.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: "Build the virtual environment for ${{ github.repository }}"
-        uses: ./.github/actions/environment
+        uses: tschm/cradle/actions/environment@main
 
       - uses: tschm/cradle/actions/marimo@main
         with:
