--- a/template/.github/workflows/pre-commit.yml
+++ b/template/.github/workflows/pre-commit.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: "Build the virtual environment"
-        uses: ./.github/actions/environment
+        uses: tschm/cradle/actions/environment@main
         with:
           python-version: '3.12'
 
