--- a/.github/workflows/act.yml
+++ b/.github/workflows/act.yml
@@ -9,16 +9,16 @@ jobs:
 
     steps:
       - name: Launch the cradle
-        uses: tschm/cradle/actions/cradle@main
+        uses: tschm/cradle/actions/cradle@v0.1.52
         with:
             python-version: '3.12'
 
       - name: Test Marimo flow
-        uses: tschm/cradle/actions/flow@main
+        uses: tschm/cradle/actions/flow@v0.1.52
         with:
           workflow: marimo.yml
 
       - name: Test ci flow
-        uses: tschm/cradle/actions/flow@main
+        uses: tschm/cradle/actions/flow@v0.1.52
         with:
           workflow: ci.yml
