--- a/template/.github/workflows/marimo.yml
+++ b/template/.github/workflows/marimo.yml
@@ -16,8 +16,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: "Build the virtual environment for ${{ github.repository }}"
-        uses: tschm/cradle/actions/environment@main
+        uses: tschm/cradle/actions/environment@v0.1.52
 
-      - uses: tschm/cradle/actions/marimo@main
+      - uses: tschm/cradle/actions/marimo@v0.1.52
         with:
           source_folder: 'notebooks'
