--- a/template/.github/workflows/pre-commit.yml
+++ b/template/.github/workflows/pre-commit.yml
@@ -19,10 +19,10 @@ jobs:
           python-version: '3.12'
 
       - name: Run deptry
-        shell: bash
-        run: |
-          python -m pip install --no-cache-dir deptry
-          python -m deptry -vv --per-rule-ignores "DEP002=kaleido,DEP002=clarabel" notebooks
+        uses: tschm/cradle/actions/deptry@v0.1.58
+        with:
+          source-folder: notebooks
+          options: "DEP002=kaleido,DEP002=clarabel"
 
   pre-commit:
     runs-on: ubuntu-latest
