--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,6 +2,7 @@
   "extends": [
     "config:recommended",
     ":enablePreCommit",
+    ":automergeMinor",
     ":dependencyDashboard",
     ":semanticCommits"
   ],
