--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,5 +7,8 @@
     ":semanticCommits"
   ],
   "enabledManagers": ["pre-commit", "github-actions"],
-  "timezone": "Asia/Dubai"
+  "timezone": "Asia/Dubai",
+  "schedule": [
+      "before 10am every tuesday"
+  ]
 }
