--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,28 +1,33 @@
+# Workflow to automatically bump the version and create a new tag
+# This workflow is manually triggered via the GitHub UI
+
 name: Bump version
 on:
-  workflow_dispatch
+  workflow_dispatch  # Manual trigger
 
+# Permissions needed for the workflow
 permissions:
-  contents: write
+  contents: write  # Allows the workflow to write to the repository (create tags)
+
 jobs:
+  # Job to generate a new version tag
   build:
     runs-on: ubuntu-latest
     outputs:
-      new_tag: ${{ steps.tag.outputs.new_tag }}
+      new_tag: ${{ steps.tag.outputs.new_tag }}  # Output the new tag to be used by other jobs
 
     steps:
       - name: Generate Tag
         id: tag
-        uses: tschm/cradle/actions/tag@v0.1.68
+        uses: tschm/cradle/actions/tag@v0.1.68  # Custom action to generate a new tag
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}  # GitHub token for authentication
 
-
+  # Job to display the newly created tag (for debugging purposes)
   debug:
-    needs: build
+    needs: build  # This job depends on the build job
     runs-on: ubuntu-latest
     steps:
-
       - name: Print Tag
         run: |
-          echo "A: ${{ needs.build.outputs.new_tag }}"
+          echo "A: ${{ needs.build.outputs.new_tag }}"  # Print the new tag
