--- a/template/.github/workflows/ci.yml
+++ b/template/.github/workflows/ci.yml
@@ -1,28 +1,33 @@
+# Continuous Integration workflow to run tests
+# This workflow runs automatically on every push to the repository
+
 name: "ci"
 
 on:
-- push
+- push  # Trigger on push events
 
 jobs:
+  # Job to run tests across multiple Python versions
   test:
     # The type of runner that the job will run on
     runs-on: ${{ matrix.os }}
 
+    # Define matrix strategy for testing across multiple Python versions
     strategy:
       matrix:
-        os: [ ubuntu-latest ]
-        python-version: [ '3.10', '3.11', '3.12', '3.13' ]
+        os: [ ubuntu-latest ]  # Currently only testing on Ubuntu
+        python-version: [ '3.10', '3.11', '3.12', '3.13' ]  # Test on multiple Python versions
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Checkout [${{ github.repository }}]
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4  # Check out the repository code
 
       - name: "Build the virtual environment"
-        uses: tschm/cradle/actions/environment@v0.1.68
+        uses: tschm/cradle/actions/environment@v0.1.68  # Custom action to set up Python environment
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ matrix.python-version }}  # Use Python version from matrix
 
-      - uses: tschm/cradle/actions/test@v0.1.68
+      - uses: tschm/cradle/actions/test@v0.1.68  # Custom action to run tests
         with:
-          tests-folder: tests
+          tests-folder: tests  # Folder containing the tests to run
