--- a/template/.github/workflows/marimo.yml
+++ b/template/.github/workflows/marimo.yml
@@ -1,23 +1,28 @@
+# Workflow to run Marimo notebooks
+# This workflow runs automatically on every push to the repository
+
 name: MARIMO
 
 on:
-  push:
+  push:  # Trigger on push events
 
+# Permissions needed for the workflow
 permissions:
-  checks: write
-  contents: read
+  checks: write  # Allows the workflow to write check results
+  contents: read  # Read-only access to repository contents
 
 jobs:
+  # Job to run Marimo notebooks
   marimo:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout [${{ github.repository }}]
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4  # Check out the repository code
 
       - name: "Build the virtual environment for ${{ github.repository }}"
-        uses: tschm/cradle/actions/environment@v0.1.68
+        uses: tschm/cradle/actions/environment@v0.1.68  # Custom action to set up Python environment
 
-      - uses: tschm/cradle/actions/marimo@v0.1.68
+      - uses: tschm/cradle/actions/marimo@v0.1.68  # Custom action to run Marimo notebooks
         with:
-          source_folder: 'notebooks'
+          source_folder: 'notebooks'  # Folder containing the notebooks to run
