--- a/template/.github/workflows/pre-commit.yml
+++ b/template/.github/workflows/pre-commit.yml
@@ -1,29 +1,35 @@
+# Workflow to run pre-commit checks and dependency analysis
+# This workflow runs automatically on every push to the repository
+
 name: pre-commit
 
 on:
-  push:
+  push:  # Trigger on push events
 
+# Only read access is needed for pre-commit checks
 permissions:
-  contents: read
+  contents: read  # Read-only access to repository contents
 
 jobs:
+  # Job to run dependency analysis with deptry
   deptry:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout [${{ github.repository }}]
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4  # Check out the repository code
 
       - name: "Build the virtual environment"
-        uses: tschm/cradle/actions/environment@v0.1.68
+        uses: tschm/cradle/actions/environment@v0.1.68  # Custom action to set up Python environment
         with:
-          python-version: '3.12'
+          python-version: '3.12'  # Use Python 3.12 for dependency analysis
 
-      - uses: tschm/cradle/actions/deptry@v0.1.68
+      - uses: tschm/cradle/actions/deptry@v0.1.68  # Custom action to run deptry for dependency analysis
         with:
-          source-folder: notebooks
-          options: '--per-rule-ignores "DEP002=clarabel|kaleido"'
+          source-folder: notebooks  # Folder to analyze dependencies
+          options: '--per-rule-ignores "DEP002=clarabel|kaleido"'  # Ignore specific dependencies
 
+  # Job to run pre-commit checks on the repository
   pre-commit:
     runs-on: ubuntu-latest
     steps:
-      - uses: tschm/cradle/actions/pre-commit@v0.1.68
+      - uses: tschm/cradle/actions/pre-commit@v0.1.68  # Custom action to run pre-commit checks
