--- a/template/requirements.txt
+++ b/template/requirements.txt
@@ -1,6 +1,16 @@
-plotly==6.1.1
-cvxpy-base==1.6.5
-clarabel==0.11.0
-numpy==2.2.6
-marimo==0.13.11
-kaleido==0.2.1
+# Project dependencies for experiments template
+# This file lists all the Python packages required for the project
+
+# Scientific computing and numerical libraries
+numpy==2.2.6  # Fundamental package for scientific computing with Python
+
+# Optimization libraries
+cvxpy-base==1.6.5  # Python-embedded modeling language for convex optimization problems
+clarabel==0.11.0  # Solver for convex optimization problems
+
+# Data visualization
+plotly==6.1.1  # Interactive, publication-quality graphing library
+kaleido==0.2.1  # Static image export for web-based visualization libraries
+
+# Interactive notebooks
+marimo==0.13.11  # Interactive notebook tool for Python
