deptry without building the environment

--- a/template/.github/workflows/pre-commit.yml
+++ b/template/.github/workflows/pre-commit.yml
@@ -15,15 +15,15 @@ jobs:
   deptry:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout [${{ github.repository }}]
-        uses: actions/checkout@v4  # Check out the repository code
+      #- name: Checkout [${{ github.repository }}]
+      #  uses: actions/checkout@v4  # Check out the repository code
 
-      - name: "Build the virtual environment"
-        uses: tschm/cradle/actions/environment@v0.1.72  # Custom action to set up Python environment
-        with:
-          python-version: '3.12'  # Use Python 3.12 for dependency analysis
+      #- name: "Build the virtual environment"
+      #  uses: tschm/cradle/actions/environment@v0.1.72  # Custom action to set up Python environment
+      #  with:
+      #    python-version: '3.12'  # Use Python 3.12 for dependency analysis
 
-      - uses: tschm/cradle/actions/deptry@v0.1.72  # Custom action to run deptry for dependency analysis
+      - uses: tschm/cradle/actions/deptry@v0.1.81  # Custom action to run deptry for dependency analysis
         with:
           source-folder: notebooks  # Folder to analyze dependencies
           options: '--per-rule-ignores "DEP002=clarabel|kaleido"'  # Ignore specific dependencies
