--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,12 @@
 
 name: Bump version
 on:
-  workflow_dispatch  # Manual trigger
+  workflow_dispatch:  # Manual trigger only
+    inputs:
+      tag:
+        description: 'Release tag (e.g. v1.2.3)'
+        required: true
+        type: string
 
 # Permissions needed for the workflow
 permissions:
@@ -11,23 +16,24 @@ permissions:
 
 jobs:
   # Job to generate a new version tag
-  build:
+  tagging:
     runs-on: ubuntu-latest
     outputs:
-      new_tag: ${{ steps.tag.outputs.new_tag }}  # Output the new tag to be used by other jobs
+      new_tag: ${{ steps.set_tag.outputs.tag }}  # Output the tag to be used by other jobs
 
     steps:
-      - name: Generate Tag
-        id: tag
-        uses: tschm/cradle/actions/tag@v0.1.72  # Custom action to generate a new tag
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}  # GitHub token for authentication
+      - name: Checkout [{% raw %}${{ github.repository }}{% endraw %}]
+        uses: actions/checkout@v4  # Check out the repository code
 
-  # Job to display the newly created tag (for debugging purposes)
-  debug:
-    needs: build  # This job depends on the build job
-    runs-on: ubuntu-latest
-    steps:
-      - name: Print Tag
+      - name: Set Tag from Input
+        id: set_tag
         run: |
-          echo "A: ${{ needs.build.outputs.new_tag }}"  # Print the new tag
+          echo "tag={% raw %}${{ github.event.inputs.tag }}{% endraw %}" >> $GITHUB_OUTPUT
+          echo "Using tag: {% raw %}${{ github.event.inputs.tag }}{% endraw %}"
+
+      - name: Create and Push Tag
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git tag -a {% raw %}${{ github.event.inputs.tag }}{% endraw %} -m "Release {% raw %}${{ github.event.inputs.tag }}{% endraw %}"
+          git push origin {% raw %}${{ github.event.inputs.tag }}{% endraw %}
