Experiment with modern marimo

--- a/template/Makefile
+++ b/template/Makefile
@@ -11,19 +11,10 @@ venv:
 	@uv venv  # Create a virtual environment in the current directory
 
 
-# Mark 'install' as a phony target (not associated with a file)
-.PHONY: install
-install: venv ## Install a virtual environment
-	@uv pip install --upgrade pip  # Ensure pip is up to date
-	@uv pip install -r requirements.txt  # Install project dependencies from requirements.txt
-
-
 # Mark 'fmt' as a phony target
 .PHONY: fmt
 fmt: venv ## Run autoformatting and linting
-	@uv pip install pre-commit  # Install pre-commit in the virtual environment
-	@uv run pre-commit install  # Install pre-commit hooks in the git repository
-	@uv run pre-commit run --all-files  # Run all pre-commit hooks on all files
+	@uvx pre-commit run --all-files  # Run all pre-commit hooks on all files
 
 
 # Mark 'clean' as a phony target
@@ -46,12 +37,5 @@ help:  ## Display this help screen
 # Mark 'marimo' as a phony target
 .PHONY: marimo
 marimo: install ## Install Marimo
-	@uv pip install marimo  # Install Marimo interactive notebook tool
-	@uv run marimo edit notebooks  # Start Marimo in edit mode, opening the notebooks directory
-
-
-# Mark 'test' as a phony target
-.PHONY: test
-test: install  ## Run pytests
-	@uv pip install pytest  # Install pytest testing framework
-	@uv run pytest tests  # Run all tests in the tests directory
+	#@uv pip install marimo  # Install Marimo interactive notebook tool
+	@uvx marimo edit --sandbox notebooks/notebook.py  # Start Marimo in edit mode, opening the notebooks directory
