--- a/template/.github/workflows/release.yml
+++ b/template/.github/workflows/release.yml
@@ -50,16 +50,18 @@ jobs:
     steps:
       - uses: jebel-quant/marimushka/@v0.1.4
         with:
-          notebooks_wasm: ''
+          notebooks_wasm: 'notebooks'
           notebooks: 'notebooks'
-          apps: ''
+          apps: 'notebooks'
 
   book:
     permissions:
       pages: write            # Permission to deploy to Pages
       id-token: write         # Permission to verify deployment origin
     runs-on: ubuntu-latest
-    needs: [ marimo ]           # This job depends on both jupyter and marimo jobs
+    needs:
+      - marimo
+      - tagging           # This job depends on both jupyter and marimo jobs
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
