--- a/template/.github/workflows/release.yml
+++ b/template/.github/workflows/release.yml
@@ -50,9 +50,9 @@ jobs:
     steps:
       - uses: jebel-quant/marimushka/@v0.1.4
         with:
-          notebooks_wasm: 'notebooks'
-          notebooks: 'notebooks'
-          apps: 'notebooks'
+          notebooks_wasm: 'marimo'
+          notebooks: 'marimo'
+          apps: 'marimo'
 
   book:
     permissions:
