--- a/.github/template.yml
+++ b/.github/template.yml
@@ -1,7 +1,8 @@
-template-repository: "tschm/.config-templates"
+template-repository: "jebel-quant/rhiza"
 template-branch: "main"
 include: |
     .github
+    .devcontainer
     tests
     .editorconfig
     .gitignore
