template with proper list

--- a/.github/template.yml
+++ b/.github/template.yml
@@ -1,16 +1,15 @@
-template-repository: "jebel-quant/rhiza"
 template-branch: "main"
-include: |
-    .github
-    .devcontainer
-    tests
-    .editorconfig
-    .gitignore
-    .pre-commit-config.yaml
-    CODE_OF_CONDUCT.md
-    CONTRIBUTING.md
-    Makefile
-    ruff.toml
-    pytest.ini
-exclude: |
-    .github/workflows/docker.yml
+include:
+    - .github
+    - .devcontainer
+    - tests
+    - .editorconfig
+    - .gitignore
+    - .pre-commit-config.yaml
+    - CODE_OF_CONDUCT.md
+    - CONTRIBUTING.md
+    - Makefile
+    - ruff.toml
+    - pytest.ini
+exclude:
+    - .github/workflows/docker.yml
